--- a/src/App.css
+++ b/src/App.css
@@ -47,13 +47,11 @@ body {
 }
 
 .about-card {
-    display: grid;
-    margin: auto;
-    margin-top: 0 auto;
-    margin-bottom: 10px;
+    display: fixed;
     height: 590px;
     font-size: 28.7px;
     width: 1100px;
+    margin: 400px auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     background-color: rgb(31, 30, 30);
     color: white;
@@ -61,7 +59,7 @@ body {
     border-radius: 10px;
     justify-content: center;
     position: absolute;
-    top: 50%;
+    /* top: 50%;  */
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
 }
@@ -103,4 +101,15 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.not-text {
+    color: white;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    font-size: 100px;
 }
